--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ html, body {width: 100%;height: 100%; margin: 0;padding: 0;}
     <h2 style="padding-top: 1em;">Selecting a Store Location</h2>
     <p>Choosing the right spot to start your bubble tea store requires an understanding about consumers and the market. Many bubble tea shops are set up near train stations as they have high footfall. The density of bubble tea shops, and by extension intensity of competition, near each train station is the highest in the Central Business District Area. Perhaps because high stress, sleep deprived and high earning power workers make ideal customers.</p>
         
-    <p style="font-size: 2em; text-align: left; padding-top: 4em; padding-left: 1.5em;"><strong>Number of BBT shops near MRT stations in Singapore</strong></p>
+    <p style="font-size: 2em; text-align: left; padding-top: 2em; padding-left: 1.5em;"><strong>Number of BBT shops near MRT stations in Singapore</strong></p>
     <div class="legend">
         <span><strong>Legend:</strong></span>
         <span class="circle large"></span><span>More than 9 shops</span>
@@ -294,8 +294,8 @@ html, body {width: 100%;height: 100%; margin: 0;padding: 0;}
 
     <div id="container2">
         <div id="text2">
-            <h2>Many stations have more than 10 BBT shops near them</h2>
-            <p>Of the stations with the most BBT shops, three quarters are in the Central Business District. Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT shops.</p>
+            <h2>Many Stations Have 10 or More BBT Shops Near Them</h2>
+            <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT shops are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT shops. There are around <b>60 brands</b> of BBT and <b>~600 BBT shops</b> in Singapore. Experts have called this a purple ocean market - hypercompetitive, oversaturated. Brands with the most number of stores are Liho (66), Koi(53) and Gong Cha (25).</p>
         </div>
         <div id="chart2">
             <div id="bubble"></div>
@@ -341,6 +341,28 @@ var svg_2 = d3.select("#bubble")
   .append("svg")
     .attr("width", 600)
     .attr("height", 600)
+
+// Add the titles
+svg_2.append("text")
+    .attr("x", width_2/7)
+    .attr("y",height_2/6)
+    .attr("text-anchor", "middle")
+    .style("font-family", 'Barlow')
+    .text("1-4 Shops");
+
+svg_2.append("text")
+    .attr("x", width_2/3)
+    .attr("y", height_2/6)
+    .attr("text-anchor", "middle")
+    .style("font-family", 'Barlow')
+    .text("5-9 Shops");
+
+svg_2.append("text")
+    .attr("x", width_2/1.5)
+    .attr("y", height_2/6)
+    .attr("text-anchor", "middle")
+    .style("font-family", 'Barlow')
+    .text(">9 Shops");
 
 // A color scale
 var color_2 = d3.scaleOrdinal()
@@ -458,7 +480,7 @@ d3.csv("mrt_bbt.csv", function(data_2) {
 });
 });
 
-
+//Map
 var map_a3d00abc80212af2517dcddab57f29d2 = L.map(
                 "map_a3d00abc80212af2517dcddab57f29d2",
                 {
