--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ html, body {width: 100%;height: 100%; margin: 0;padding: 0;}
     <div id="container2">
         <div id="text2">
             <h2>Many Stations Have 10 or More BBT Shops Near Them</h2>
-            <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT shops are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT shops. There are around <b>60 brands</b> of BBT and <b>~600 BBT shops</b> in Singapore. Experts have called this a purple ocean market - hypercompetitive, oversaturated. Brands with the most number of stores are Liho (66), Koi(53) and Gong Cha (25).</p>
+            <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT shops are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT shops. There are around <b>60 brands</b> of BBT and <b>562 BBT shops</b> in Singapore in 2023. Experts have called this a purple ocean market - hypercompetitive and oversaturated. BBT brands with the most number of stores are LiHO Tea (103), KOI (82), Gong Cha (31) and ChiCha San Chen(31).</p>
         </div>
         <div id="chart2">
             <div id="bubble"></div>
