--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script>L_NO_TOUCH = false; L_DISABLE_3D = false;</script>
     
 <style>
-html, body {width: 100%;height: 100%; margin: 0;padding: 0;}
+html {width: 100%; height: 100%; margin: 0;padding: 0;}
 
     body{
         background-color: rgb(255, 242, 235);
@@ -138,7 +138,8 @@ html, body {width: 100%;height: 100%; margin: 0;padding: 0;}
         left: 0.0%;
         top: 0.0%;
         width: 1280px;
-        height: 600px;}
+        height: 600px;
+        padding-left: 1em;}
                 
     .leaflet-container { font-size: 1rem; }
  
@@ -295,7 +296,8 @@ html, body {width: 100%;height: 100%; margin: 0;padding: 0;}
     <div id="container2">
         <div id="text2">
             <h2>Many Stations Have 10 or More BBT Shops Near Them</h2>
-            <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT shops are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT shops. There are around <b>60 brands</b> of BBT and <b>562 BBT shops</b> in Singapore in 2023. Experts have called this a purple ocean market - hypercompetitive and oversaturated. BBT brands with the most number of stores are LiHO Tea (103), KOI (82), Gong Cha (31) and ChiCha San Chen(31).</p>
+            <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT shops are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT shops. There are around <b>60 brands</b> of BBT and <b>562 BBT shops</b> in Singapore in 2023. Experts have called this a purple ocean market - hypercompetitive and oversaturated. BBT brands with the most number of stores are LiHO Tea (103) and KOI (82).</p>
+            <img src="NumberofStores.svg" style="width: 90%; padding-top: 2em;">
         </div>
         <div id="chart2">
             <div id="bubble"></div>
