included the kaggle reference

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
     <div class="panel one">
     <h2>Conclusion</h2>
     <p>While Singaporean's love affair with bubble tea is here to stay, the data shows that it is not easy to enter the bubble tea market and compete successfully in it.</p>
-    <p style="padding-bottom: 20em; font-style: italic;">The data from this study comes from <a href="https://thelowdown.momentum.asia/press-release-southeast-asia-spends-us3-66-billion-a-year-on-bubble-tea-momentum-works-qlub-report/">'Bubble Tea - The business behind Southeast Asia's favourite drink' by Momentum Works and qlub in Aug 2022</a>; as well as Google maps data on bubble tea shops in Singapore.</p>
+    <p style="padding-bottom: 20em; font-style: italic;">The data from this study comes from <a href="https://thelowdown.momentum.asia/press-release-southeast-asia-spends-us3-66-billion-a-year-on-bubble-tea-momentum-works-qlub-report/">'Bubble Tea - The business behind Southeast Asia's favourite drink' by Momentum Works and qlub in Aug 2022</a>; as well as Google maps data on bubble tea shops in Singapore. Credits to <a href="https://www.kaggle.com/code/glenteoh/bubble-tea-shops-by-mrt-station-in-singapore">Glen Teoh </a>for the Python code for Bubble Tea Shops near MRT Stations in Singapore.</p>
     </div>
 </div>
 </body>
