--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
 <body>
 <section>
     <div class="container_head">
-    <h1 class="main-title">So, you want to own a Boba shop</h1>
+    <h1 class="main-title">So, you want to own a Boba store</h1>
     <img src="7.svg" class="bg1" alt=""/>
     <img src="8.svg" class="cafe" alt=""/>
     <img src="6.svg" class="bubbles" alt=""/>
@@ -298,20 +298,20 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
     <h2 style="padding-top: 1em;">Selecting a Store Location</h2>
     <p>Choosing the right spot to start your bubble tea store requires an understanding about consumers and the market. Many bubble tea shops are set up near train stations as they have high footfall. The density of bubble tea shops, and by extension intensity of competition, near each train station is the highest in the Central Business District Area. Perhaps because high stress, sleep deprived and high earning power workers make ideal customers.</p>
         
-    <p style="font-size: 2em; text-align: left; padding-top: 2em; padding-left: 1.5em;"><strong>Number of BBT shops near MRT stations in Singapore</strong></p>
+    <p style="font-size: 2em; text-align: left; padding-top: 2em; padding-left: 1.5em;"><strong>Number of BBT stores near MRT stations in Singapore</strong></p>
     <div class="legend">
         <span><strong>Legend:</strong></span>
-        <span class="circle large"></span><span>More than 9 shops</span>
-        <span class="circle medium"></span><span>5-9 shops</span>
-        <span class="circle small"></span><span>1-4 shops</span>
+        <span class="circle large"></span><span>10 or more stores</span>
+        <span class="circle medium"></span><span>5-9 stores</span>
+        <span class="circle small"></span><span>1-4 stores</span>
     </div>
 
     <div class="folium-map" id="map_a3d00abc80212af2517dcddab57f29d2"></div>
 
     <div id="container2">
         <div id="text2">
-            <h2>Many Stations Have 10 or More BBT Shops Near Them</h2>
-            <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT shops are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT shops. There are around <b>60 brands</b> of BBT and <b>562 BBT shops</b> in Singapore in 2023. Experts have called this a purple ocean market - hypercompetitive and oversaturated. BBT brands with the most number of stores are LiHO Tea (103) and KOI (82).</p>
+            <h2>Many Stations Have 10 or More BBT Stores Near Them</h2>
+            <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT stores are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT stores. There are around <b>60 brands</b> of BBT and <b>562 BBT stores</b> in Singapore in 2023. Experts have called this a purple ocean market - hypercompetitive and oversaturated. BBT brands with the most number of stores are LiHO Tea (103) and KOI (82).</p>
             <img src="NumberofStores.svg" style="width: 95%; padding-top: 2em;">
         </div>
         <div id="chart2">
@@ -364,21 +364,21 @@ svg_2.append("text")
     .attr("y",height_2/6)
     .attr("text-anchor", "middle")
     .style("font-family", 'Barlow')
-    .text("1-4 Shops");
+    .text("1-4 Stores");
 
 svg_2.append("text")
     .attr("x", width_2/3)
     .attr("y", height_2/6)
     .attr("text-anchor", "middle")
     .style("font-family", 'Barlow')
-    .text("5-9 Shops");
+    .text("5-9 Stores");
 
 svg_2.append("text")
     .attr("x", width_2/1.5)
     .attr("y", height_2/6)
     .attr("text-anchor", "middle")
     .style("font-family", 'Barlow')
-    .text(">9 Shops");
+    .text("10 or more Stores");
 
 // A color scale
 var color_2 = d3.scaleOrdinal()
