--- a/index.html
+++ b/index.html
@@ -255,10 +255,9 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
             <p>Thai consumers drink the most bubble tea on average compared to the rest of us. According to restaurant review platform <i>Wongnai </i> there are more than 31 thousand bubble tea shops in the kingdom.</br>
             <p> What Singapore lacks in population size, it makes up with spending power. Paying an average price of US$3.90 for a regular standard-sized cup of sugary bliss of the same brand and product, compared to US$2 in the rest of Southeast Asia. 
             </p>
-            
             <div class="chartCard">
                 <div class="chartBox">
-                    <canvas id="myChart" width="800px" height="600px"></canvas>
+                    <canvas id="myChart"></canvas>
                 </div>
             </div>
         </div>
@@ -316,7 +315,7 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
             <div class="appear">
                 <h2>Who are the Top Competitors? </h2>
                 <p>There are around <b>60 brands</b> of BBT and <b>562 BBT stores</b> in Singapore in 2023. Experts have called this a purple ocean market - hypercompetitive and oversaturated. BBT brands with the most number of stores are LiHO Tea (103) and KOI (82).</p>
-                <img src="NumberofStores.svg" style="width: 90%; padding-top: 3em; padding-bottom: 6em;">
+                <img src="NumberofStores.svg" style="width: 80%; padding-top: 3em; padding-bottom: 6em;">
              </div>
         </section>
         
