added min height

--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
 
       .chartBox {
         width: 100%;
-        padding: 50px;
+        min-height: 400px;
+        padding: 20px;
         border-radius: 10px;
         /*border: solid 3px rgb(71, 31, 33);*/ 
         background: rgb(255, 242, 235);
@@ -255,11 +256,11 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
             <p> What Singapore lacks in population size, it makes up with spending power. Paying an average price of US$3.90 for a regular standard-sized cup of sugary bliss of the same brand and product, compared to US$2 in the rest of Southeast Asia. 
             </p>
             <div class="col-lg-8 col-md-12 col-sm-12">
-            <div class="chartCard">
-                <div class="chartBox">
-                    <canvas id="myChart"></canvas>
+                <div class="chartCard">
+                    <div class="chartBox">
+                        <canvas id="myChart"></canvas>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
 
