--- a/index.html
+++ b/index.html
@@ -328,6 +328,17 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
             </div>
         </div>
 
+        <!--Include Additional Graph Here-->
+        <section class="panel two">
+            <div class="appear">
+                <h2>Trend of Bubble Tea in Singapore</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique recusandae cum soluta! Accusantium laborum error, ducimus, veniam commodi nulla est sed, reprehenderit illum odio enim. Alias culpa officiis cum sit.</p>
+                <div class="col-lg-8 col-md-12 col-sm-12">
+                    <!--Include Graph Here-->
+                </div>
+            </div>
+        </section>
+
         <section class="panel one">
             <div id="container2" class="row appear">
                 <div class="col-md-6">
@@ -348,34 +359,38 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
             </div>
         </section>
 
-        <div class="appear">
-            <h2 style="padding-top: 1em;">Selecting a Store Location</h2>
-            <p>Choosing the right spot to start your bubble tea store requires an understanding about consumers and the market. Many bubble tea shops are set up near train stations as they have high footfall. The density of bubble tea shops, and by extension intensity of competition, near each train station is the highest in the Central Business District Area. Perhaps because high stress, sleep deprived and high earning power workers make ideal customers.</p>
+        <section class="panel two">
+            <div class="appear">
+                <h2 style="padding-top: 1em;">Selecting a Store Location</h2>
+                <p>Choosing the right spot to start your bubble tea store requires an understanding about consumers and the market. Many bubble tea shops are set up near train stations as they have high footfall. The density of bubble tea shops, and by extension intensity of competition, near each train station is the highest in the Central Business District Area. Perhaps because high stress, sleep deprived and high earning power workers make ideal customers.</p>
         
-            <p style="font-size: 2em; text-align: left; padding-top: 2em; padding-left: 2.8em;"><strong>Number of BBT stores near MRT stations in Singapore</strong></p>
-            <div class="legend">
-                <span><strong>Legend:</strong></span>
-                <span class="circle large"></span><span>10 or more stores</span>
-                <span class="circle medium"></span><span>5-9 stores</span>
-                <span class="circle small"></span><span>1-4 stores</span>
-            </div>
+                <p style="font-size: 2em; text-align: left; padding-top: 2em; padding-left: 2.8em;"><strong>Number of BBT stores near MRT stations in Singapore</strong></p>
+                <div class="legend">
+                    <span><strong>Legend:</strong></span>
+                    <span class="circle large"></span><span>10 or more stores</span>
+                    <span class="circle medium"></span><span>5-9 stores</span>
+                    <span class="circle small"></span><span>1-4 stores</span>
+                </div>
 
-            <div class="row">
-                <div class="col-md-6 col-sm-12">
-                    <div class="folium-map" id="map_a3d00abc80212af2517dcddab57f29d2"></div>
+                <div class="row">
+                    <div class="col-md-6 col-sm-12">
+                        <div class="folium-map" id="map_a3d00abc80212af2517dcddab57f29d2"></div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <div class="row appear"> 
-            <div class="col-lg-6 col-md-6 col-sm-12" style="padding-top: 2.5em;">
-                <h2>Many Stations Have 10 or More BBT Stores Near Them</h2>
-                <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT stores are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT stores. </p>
+        <section class="panel two">
+            <div class="row appear"> 
+                <div class="col-lg-6 col-md-6 col-sm-12" style="padding-top: 2.5em;">
+                    <h2>Many Stations Have 10 or More BBT Stores Near Them</h2>
+                    <p>Surprisingly, <b>three quarters</b> of the stations with the most BBT stores are in the CBD! Regional hubs like Jurong East and Tampines rank among the top regions with the most BBT stores. </p>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <div id="bubble"></div>
+                </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-12">
-                <div id="bubble"></div>
-            </div>
-        </div>
+        </section>
 
         <section class="panel one">
             <div class="appear">
