--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ html {width: 100%; height: 100%; margin: 0;padding: 0;}
                 <!--Line Chart Set-up-->
                 </div>
                 <div class="col">
-                    <p style="font-size: 2em; text-align: left; padding-top: 2em; padding-left: 6em; padding-bottom: 0;"><strong>Import of Tapoica Products to Singapore in Tonnes (2011 - 2021)</strong></p>
+                    <p style="font-size: 2em; text-align: left; padding-top: 2em; padding-left: 6em; padding-bottom: 0;"><strong>Import of Tapioca Products to Singapore in Tonnes (2011 - 2021)</strong></p>
                     <div id="my_dataviz"></div>     
                     <script src="https://d3js.org/d3.v4.min.js"></script>
                     <style>.myCircle:hover {stroke: rgb(252, 88, 115);}</style>
