--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@ gsap.to(".main-title", {
 
 /*====== SCROLL REVEAL SECTION ======*/
 const sr = ScrollReveal({
+    origin:top,
     duration: 2500,
     reset: true
 });
