--- a/index.html
+++ b/index.html
@@ -594,6 +594,7 @@ gsap.to(".main-title", {
 const sr = ScrollReveal({
     origin:top,
     duration: 2500,
+    distance:0,
     reset: true
 });
 
