--- a/index.html
+++ b/index.html
@@ -595,7 +595,8 @@ const sr = ScrollReveal({
     origin:top,
     duration: 2500,
     distance:0,
-    reset: true
+    reset: true,
+    delay:0
 });
 
 /*===== Data =====*/
