--- a/index.html
+++ b/index.html
@@ -590,7 +590,8 @@ gsap.to(".main-title", {
   filter: "glow(70px 70px 30px rgba(255, 255, 255))",
 });
 
-/*====== SCROLL REVEAL SECTION ======*/
+if (window.innerWidth > 768){
+    /*====== SCROLL REVEAL SECTION ======*/
 const sr = ScrollReveal({
     origin:top,
     duration: 2500,
@@ -601,6 +602,7 @@ const sr = ScrollReveal({
 
 /*===== Data =====*/
 sr.reveal('.appear',{origin: 'left',distance: '70px'}); 
+};
 
 /*===== Boba Bubble Chart =====*/
 // set the dimensions and margins of the graph
